scrollbar problem solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,10 @@
 .font-comfortaa {
   font-family: var(--font-comfortaa);
 }
-
+html body[data-scroll-locked] {
+  overflow: visible !important;
+  margin-right: 0 !important;
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
